Fixed issue of specitivity with update event button text to make it legible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,7 +95,3 @@ center > h1 {
     background-color: #dc3545;
     color: #332533;
 }
-
-#update {
-    color: #b3bfba;
-}
